:bug: - Fix missing background color in file input.

--- a/rijkshuisstijl/sass/components/form/_input.scss
+++ b/rijkshuisstijl/sass/components/form/_input.scss
@@ -54,6 +54,7 @@
   &__filepicker {
     @include input;
     background: $input-background-file, $input-background-button, $input-background-input;
+    @include color-background;
     content: attr(value);
   }
 
